# pp-01

./: LICENCE  README.md  pyproject.toml
output/: missing.csv  values.csv
src/: decorators.py  etl.py  file_fetcher.py  main.py
src/poetry/: etl.py  exceptions.py  file_fetcher.py  main.py
tests/: test_decorators.py  test_file_fetcher.py
