[project]
name = "poetry"
version = "0.1.0"
description = "Projekt zaliczeniowy na przedmiot Programowanie w Pythonie"
authors = [
    {name = "Grzegorz Ziolo",email = "12894466+21010@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
]

[tool.poetry]
packages = [{include = "poetry", from = "src"}]

[project.scripts]
etl = "poetry.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
